Bug 156597 - [css-grid] Fix positioned items with content alignment
Summary: [css-grid] Fix positioned items with content alignment
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Manuel Rego Casasnovas
URL:
Keywords:
Depends on: 156589
Blocks: 60731 156623
  Show dependency treegraph
 
Reported: 2016-04-14 13:57 PDT by Manuel Rego Casasnovas
Modified: 2016-04-18 01:19 PDT (History)
8 users (show)

See Also:


Attachments
Patch (44.55 KB, patch)
2016-04-14 14:00 PDT, Manuel Rego Casasnovas
no flags Details | Formatted Diff | Diff
Patch (41.73 KB, patch)
2016-04-14 14:01 PDT, Manuel Rego Casasnovas
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Rego Casasnovas 2016-04-14 13:57:42 PDT
Like in the case of gaps (bug #156288), positioned items are not working properly with content alignment.

This has been fixed in Blink already: https://codereview.chromium.org/1870623002/
Comment 1 Manuel Rego Casasnovas 2016-04-14 14:00:43 PDT
Created attachment 276423 [details]
Patch

The patch has been developed on top of patch for bug #156589 (so it doesn't apply in trunk).
Comment 2 Manuel Rego Casasnovas 2016-04-14 14:01:50 PDT
Created attachment 276424 [details]
Patch
Comment 3 Darin Adler 2016-04-16 10:44:30 PDT
Comment on attachment 276424 [details]
Patch

Annoying to have these tests that just write out PASS PASS PASS. Would be nicer some day to use reference tests or to pave the tests write something more about what they are testing so if something fails you can get a better understanding of what.
Comment 4 Manuel Rego Casasnovas 2016-04-18 01:17:26 PDT
Comment on attachment 276424 [details]
Patch

Thanks for the review.

The problem with reference tests is the 800x600 viewport size,
we would need a lot of different tests to check all the cases or use smaller sizes for everything so it'd be harder to debug.

I agree that the tests full of PASS are not very nice, but when they fail they provide quite a lot of information.
Comment 5 WebKit Commit Bot 2016-04-18 01:19:54 PDT
Comment on attachment 276424 [details]
Patch

Clearing flags on attachment: 276424

Committed r199657: <http://trac.webkit.org/changeset/199657>
Comment 6 WebKit Commit Bot 2016-04-18 01:19:58 PDT
All reviewed patches have been landed.  Closing bug.