[css-grid] Fix positioned items with content alignment https://bugs.webkit.org/show_bug.cgi?id=156597

Reviewed by Darin Adler.

Source/WebCore:

Like for the case of gaps we need to take into account
the content alignment in order to properly place and size
the positioned items.

Regarding content alignment we need to care about 2 values:
the position offset and the distribution offset.
The position offset can be extracted from m_column|rowPositions,
but the distribution offset is stored in 2 new variables called
m_offsetBetweenColumns|Rows.

Tests: fast/css-grid-layout/grid-positioned-items-content-alignment.html
       fast/css-grid-layout/grid-positioned-items-content-alignment-rtl.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::offsetAndBreadthForPositionedChild):
(WebCore::RenderGrid::populateGridPositions):
(WebCore::RenderGrid::columnAxisOffsetForChild):
(WebCore::RenderGrid::rowAxisOffsetForChild):
(WebCore::RenderGrid::rowAxisPositionForChild): Deleted.
* rendering/RenderGrid.h:

LayoutTests:

* fast/css-grid-layout/grid-positioned-items-content-alignment-expected.txt: Added.
* fast/css-grid-layout/grid-positioned-items-content-alignment-rtl-expected.txt: Added.
* fast/css-grid-layout/grid-positioned-items-content-alignment-rtl.html: Added.
* fast/css-grid-layout/grid-positioned-items-content-alignment.html: Added.


Canonical link: https://commits.webkit.org/174792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199657 268f45cc-cd09-0410-ab3c-d52691b4dbfc